--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="brand">
-          <div class="logo-placeholder">TV</div>
+          <img class="site-logo" src="images/Techvilla-logo.png" alt="Techvilla logo" />
           <h1>Techvilla Gadget store</h1>
         </div>
         <nav class="nav">
