--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
 		<header class="site-header">
 			<div class="container header-inner">
 				<div class="brand">
-					<div class="logo-placeholder">TV</div>
+					<img class="site-logo" src="images/Techvilla-logo.png" alt="Techvilla logo" />
 					<div>
 						<div style="font-weight:700">Techvilla</div>
 						<div class="muted" style="font-size:12px">Checkout</div>
@@ -133,6 +133,7 @@
 					<div style="margin-top:12px">
 						<div class="summary-row"><span>Subtotal</span><strong id="subtotal">$0.00</strong></div>
 						<div class="summary-row"><span>Shipping</span><strong id="shippingAmount">$0.00</strong></div>
+						<div class="summary-row"><span>Discount</span><strong id="discountAmount">$0.00</strong></div>
 						<div class="summary-row"><span>Tax (est.)</span><strong id="taxAmount">$0.00</strong></div>
 						<div class="summary-row" style="font-size:18px;margin-top:8px"><span>Total</span><strong id="totalAmount">$0.00</strong></div>
 					</div>
