--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,13 @@
           <h2>Latest phones & smart gadgets</h2>
           <p>Top brands, best deals, and fast delivery — discover your next device at Techvilla.</p>
         </div>
-        <div class="hero-image" aria-hidden="true">📱</div>
+        <div class="hero-image" aria-hidden="true">
+          <picture>
+            <source media="(min-width:900px)" srcset="images/Macbook pro.jpg">
+            <source media="(min-width:480px)" srcset="images/earbuds.webp">
+            <img src="images/iphone 11promax 64gb.jpeg" alt="Hero" />
+          </picture>
+        </div>
       </section>
 
       <section class="products-section">
