--- a/cart.html
+++ b/cart.html
@@ -153,5 +153,9 @@
 		</footer>
 
 		<script src="scripts.js"></script>
+		<!-- WhatsApp floating button -->
+		<a class="whatsapp-fab" href="https://wa.me/2348146928961" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp">
+			<img src="images/WhatsApp.webp" alt="WhatsApp" />
+		</a>
 	</body>
 </html>
