--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,13 @@
 
     <main class="container main">
       <section class="hero">
+        <!-- 3D live-photos panel (left half) -->
+        <div class="live-photos-panel" aria-hidden="true">
+          <div class="layers" id="liveLayers">
+            <!-- layers will be injected by scripts.js -->
+          </div>
+          <div class="live-overlay">Live Photos</div>
+        </div>
         <div>
           <h2>Latest phones & smart gadgets</h2>
           <p>Top brands, best deals, and fast delivery — discover your next device at Techvilla.</p>
