--- a/Index.html
+++ b/Index.html
@@ -108,5 +108,7 @@
     <a class="whatsapp-fab" href="https://wa.me/2348146928961" target="_blank" rel="noopener" aria-label="Contact us on WhatsApp">
       <img src="images/WhatsApp.webp" alt="WhatsApp" />
     </a>
+    <!-- Toast notifications -->
+    <div id="toast" role="status" aria-live="polite" aria-atomic="true" class="toast" hidden>Added to cart</div>
   </body>
 </html>
