--- a/cart.html
+++ b/cart.html
@@ -76,7 +76,7 @@
 						<fieldset style="margin-top:12px">
 							<legend>Shipping options</legend>
 							<label><input type="radio" name="shipping" value="standard" checked /> Standard — 3-6 days</label><br />
-							<label><input type="radio" name="shipping" value="expedited" /> Expedited — 1-2 days (+$9.99)</label><br />
+							<label><input type="radio" name="shipping" value="expedited" /> Expedited — 1-2 days (+₦9.99)</label><br />
 							<label><input type="radio" name="shipping" value="pickup" /> Pickup — free</label>
 						</fieldset>
 
@@ -110,7 +110,7 @@
 										<div class="muted">Make a bank transfer to the account below. Use your full name as reference and keep the transfer receipt.</div>
 										<ul style="margin-top:8px">
 											<li>Account name: Techvilla Ltd</li>
-											<li>Account number: 12345678</li>
+											<li>Account number: 8176620230 Moniepoint</li>
 											<li>Routing / Sort code: 00-00-00</li>
 											<li>IBAN: GB00TVLA00000012345678 (example)</li>
 										</ul>
@@ -131,11 +131,11 @@
 					<div id="orderItems" style="max-height:360px;overflow:auto;margin-top:8px"></div>
 
 					<div style="margin-top:12px">
-						<div class="summary-row"><span>Subtotal</span><strong id="subtotal">$0.00</strong></div>
-						<div class="summary-row"><span>Shipping</span><strong id="shippingAmount">$0.00</strong></div>
-						<div class="summary-row"><span>Discount</span><strong id="discountAmount">$0.00</strong></div>
-						<div class="summary-row"><span>Tax (est.)</span><strong id="taxAmount">$0.00</strong></div>
-						<div class="summary-row" style="font-size:18px;margin-top:8px"><span>Total</span><strong id="totalAmount">$0.00</strong></div>
+						<div class="summary-row"><span>Subtotal</span><strong id="subtotal">₦0.00</strong></div>
+						<div class="summary-row"><span>Shipping</span><strong id="shippingAmount">₦0.00</strong></div>
+						<div class="summary-row"><span>Discount</span><strong id="discountAmount">₦0.00</strong></div>
+						<div class="summary-row"><span>Tax (est.)</span><strong id="taxAmount">₦0.00</strong></div>
+						<div class="summary-row" style="font-size:18px;margin-top:8px"><span>Total</span><strong id="totalAmount">₦0.00</strong></div>
 					</div>
 
 					<div style="margin-top:14px;display:flex;gap:8px;flex-direction:column">
