--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8934727831576854"
+     crossorigin="anonymous"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<title>Cart — Techvilla</title>
@@ -16,10 +18,10 @@
 						<div class="muted" style="font-size:12px">Checkout</div>
 					</div>
 				</div>
-				<nav class="nav">
-					<button id="homeBtn" class="cart-btn">Continue shopping</button>
-					<button id="cartBtnHeader" class="cart-btn">Cart <span id="cartCountHeader" class="cart-count">0</span></button>
-				</nav>
+					<nav class="nav">
+						<a id="homeBtn" class="cart-btn" href="Index.html">Continue shopping</a>
+						<button id="cartBtnHeader" class="cart-btn">Cart <span id="cartCountHeader" class="cart-count">0</span></button>
+					</nav>
 			</div>
 		</header>
 
