--- a/Index.html
+++ b/Index.html
@@ -21,12 +21,24 @@
           <select id="categoryFilter" class="select">
             <option value="all">All categories</option>
             <option value="phones">Phones</option>
+            <option value="laptops">Laptops</option>
+            <option value="tablets">Tablets</option>
             <option value="audio">Audio</option>
             <option value="accessories">Accessories</option>
-            <option value="cars">Cars</option>
+            <option value="consoles">Consoles</option>
+            <option value="wearables">Wearables</option>
+            <option value="vehicles">Vehicles</option>
+            <option value="deals">Deals</option>
           </select>
-          <a id="viewCart" class="cart-btn" href="cart.html" aria-label="View cart">View cart</a>
-          <button id="cartBtn" class="cart-btn" aria-label="Open cart">Cart <span id="cartCount" class="cart-count">0</span></button>
+          <button id="cartBtn" class="cart-btn" aria-label="Open cart">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="9" cy="21" r="1"></circle>
+              <circle cx="20" cy="21" r="1"></circle>
+              <path d="m1 1 4 4 13 3.5-3 7H6"></path>
+              <path d="M16 8 6 8"></path>
+            </svg>
+            <span id="cartCount" class="cart-count">0</span>
+          </button>
         </nav>
       </div>
     </header>
