--- a/cart.html
+++ b/cart.html
@@ -88,8 +88,8 @@
 
 						<fieldset style="margin-top:12px">
 							<legend>Shipping options</legend>
-							<label><input type="radio" name="shipping" value="standard" checked /> Standard — 3-6 days</label><br />
-							<label><input type="radio" name="shipping" value="expedited" /> Expedited — 1-2 days (+₦9.99)</label><br />
+							<label><input type="radio" name="shipping" value="standard" checked /> Standard — 3-6 days (₦1,500)</label><br />
+							<label><input type="radio" name="shipping" value="expedited" /> Expedited — 1-2 days (₦1,500)</label><br />
 							<label><input type="radio" name="shipping" value="pickup" /> Pickup — free</label>
 						</fieldset>
 
